# discord-mafia-rich-presence

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  bundle_macos.sh
res/: icon.icns
src/: autostart.rs  main.rs  tray.rs
